# arrowz

./: .aider.rules  .cursorignore  .cursorrules  .gitignore  .gptignore  .pre-commit-config.yaml  AI_GUIDELINES.md  ARCHITECTURE.md  BRAND.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_REVIEW.md  CONTEXT-AR.md  CONTEXT.md  CONTRIBUTING.md  DEVELOPMENT.md  DINSTAR_API.md  GLOSSARY.md  INSTALL_COTURN.md  INTEGRATIONS.md  ISSUES_ROOT_CAUSE_ANALYSIS.md  LICENSE  PROMPT_CONTEXT.md  README.md  RECOMMENDED_FIXES.md  SCENARIOS.md  TROUBLESHOOTING.md  conftest.py  pyproject.toml  pytest.ini  turnserver.conf.example
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  linters.yml  release.yml  test.yml
arrowz/: __init__.py  asterisk_doctor.py  boot.py  demo.py  dev_constants.py  exceptions.py  freepbx_token.py  gate.py  hooks.py  install.py  local_pbx_monitor.py  modules.txt  notifications.py  patches.txt  pbx_monitor.py  permissions.py  seed.py  ssh_manager.py  tasks.py  tasks_network.py  uninstall.py
arrowz/api/: __init__.py  agent.py  analytics.py  call_log.py  communications.py  contacts.py  dashboard.py  dinstar.py  notifications.py  recording.py  response.py  screenpop.py  sms.py  topology.py  wallboard.py  webhooks.py  webrtc.py
arrowz/api/v1/: __init__.py
arrowz/arrowz/workspace/: arrowz.json  arrowz_bandwidth.json  arrowz_network.json  arrowz_security.json  arrowz_setup.json  arrowz_voip.json  arrowz_vpn.json  arrowz_wifi.json
arrowz/arrowz/workspace_sidebar/: arrowz.json
arrowz/arrowz_api/utils/: __init__.py  (+4 more)
arrowz/caps/: capability.json  capability_bundle.json  gate.py  role_capability_map.json
arrowz/caps_integration/: __init__.py  gate.py
arrowz/desktop_icon/: arrowz.json  arrowz_bandwidth.json  arrowz_network.json  arrowz_security.json  arrowz_setup.json  arrowz_voip.json  arrowz_vpn.json  arrowz_wifi.json  bandwidth.json  network.json  security.json
arrowz/device_providers/: __init__.py  base_provider.py  error_tracker.py  provider_factory.py  sync_engine.py
arrowz/docs/: 00-README-AR.md  01-OVERVIEW.md  02-DATABASE-SCHEMA.md  03-API-REFERENCE.md  04-FRONTEND-GUIDE.md  05-INTEGRATION-GUIDE.md  06-SUGGESTIONS.md  07-TECHNICAL-SPECS.md  DEVELOPER-GUIDE.md  USER-GUIDE-ADMIN.md  USER-GUIDE-AGENT.md  USER-GUIDE-MANAGER.md
arrowz/events/: __init__.py  contact.py  conversation.py  lead.py  meeting.py  network.py
arrowz/fixtures/: desktop_icon.json
arrowz/help/: _meta.json
arrowz/integrations/: __init__.py  base.py  openmeetings.py  telegram.py  whatsapp.py
arrowz/scripts/: fix_asterisk_errors.sh  seed_vpn_data.py
arrowz/services/: __init__.py  call_service.py  meeting_service.py  network_service.py  omni_service.py
arrowz/tests/: README.md  __init__.py  conftest.py  test_api.py  test_permissions.py
arrowz/translations/: ar.csv  zh.csv
arrowz/utils/: __init__.py  constants.py  formatters.py  validators.py
arrowz/www/: arrowz_about.html  arrowz_about.py  arrowz_onboarding.html  arrowz_onboarding.py  pbx_monitor.html  pbx_monitor.py
docker/: README.md  arrowz_infra_setup.sh  docker-compose.pbx.yml  fix_all_pbx.sh  fix_endpoint_custom.sh  fix_pjsip_local_net.sh  rebuild-with-pbx.sh  setup_shared_network.sh
docker/freepbx/: docker-compose.shared-net.yml
docker/openmeetings/: docker-compose.yml  nginx-openmeetings.conf
docs/: AI_CONTEXT.md  API_REFERENCE.md  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  DEVELOPER_GUIDE.md  DEVELOPMENT_SESSION_SUMMARY.md  DOCTYPES_REFERENCE.md  FAQ.md  FEATURES_AR.md  FEATURES_EN.md  FREEPBX_SETUP.md  INDEX.md  MIGRATION_V16.md  OPENMEETINGS_SETUP.md  PAGES_REFERENCE.md  PERSONAS.md  PROJECT_HISTORY.md  QUALITY_ASSURANCE.md  README.md  ROADMAP.md  SALES_PLAYBOOK.md  SERVER_ADMIN.md  TECHNICAL_IMPLEMENTATION.md  TRAINING.md  api_reference.md  contactcall_routes.md  omni_channel_platform.md  omni_channel_platform_ar.md
docs/competitive/: 01_OMADA_VS_ARROWZ_COMPARISON.md  02_IMPLEMENTATION_ROADMAP.md  03_ARROWZ_UNIQUE_ADVANTAGES.md
docs/diagrams/: README.md  dependency-graph.md  erd.md  module-map.md
docs/dinstar-setup/: 1_vpn_dinstar_server.sh  3_asterisk_dinstar_trunk.sh  4_dinstar_device_config.md  4_dinstar_device_config_OLD.md  4_dinstar_device_config_old.md  5_dinstar_device_manual_guide.md  5_test_connectivity.sh  README.md  deploy_dinstar_trunk.sh  deploy_dinstar_vpn.sh
docs/posts/: README.md
docs/scenarios/: README.md
docs/screens/: README.md
initpbx/: Dockerfile  docker-compose.yml
scripts/: check_ws.py  create_api_client.py  create_sample_data.py  create_simple_workspace.py  fix_all_networking.sh  fix_nginx_ws.sh  fix_pbx_rtp.sh  fix_socketio_config.py  fix_workspace.py  freepbx_api_setup.py  freepbx_commands.py  freepbx_commands_en.py  freepbx_debugger.py  get_freepbx_token.py  rename_app.sh
vpn-setup/: 0_host_prepare.sh  1_setup_inside_container.sh  2_commit_and_restart.sh  3_enable_full_tunnel.sh  4_setup_openvpn_static.sh  5_openvpn_diagnose.sh  6_openvpn_clean.sh  7_cleanup_peers.sh  8_autostart_commit.sh  FINAL_openvpn_setup.sh  fix_ovpn_for_nm.sh  fix_qr.sh  setup_wireguard.sh  vpn_diagnose.sh
wiki/: API-Reference.md  Architecture.md  Deployment.md  DocTypes-Reference.md  FAQ.md  Getting-Started.md  Home.md  Permissions.md  Translation-Guide.md
(+475 files in other folders)
