[project]
name = "arrowz"
version = "1.0.0"
description = "Enterprise VoIP Call Management with AI - Next Generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Arrowz Team" }
]
keywords = ["frappe", "erpnext", "voip", "webrtc", "call center", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Frappe",
    "Intended Audience :: Customer Service",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Telephony"
]

[project.urls]
Homepage = "https://github.com/company/arrowz"
Documentation = "https://github.com/company/arrowz/wiki"

[project.optional-dependencies]
ssh = ["paramiko>=3.0"]

[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[tool.bench]
app_name = "arrowz"
app_title = "Arrowz"
app_publisher = "Arrowz Team"
app_description = "Enterprise VoIP Call Management with AI"
app_version = "1.0.0"
app_icon = "octicon octicon-broadcast"
app_color = "#5e35b1"
app_email = "support@arrowz.io"
app_license = "MIT"

[tool.pytest.ini_options]
testpaths = ["arrowz/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
